--- a/main/view/index.html
+++ b/main/view/index.html
@@ -26,6 +26,11 @@
 </head>
 
 <body>
+
+<div id="loader-overlay" class="loader-overlay">
+    <div class="loader"></div>
+</div>
+
 <div class="container">
     <div class="card">
         <div class="card-body">
@@ -39,8 +44,6 @@
         </div>
     </div>
 </div>
-
-
 
 <!-- Error Toast -->
 <div id="error-toast" class="toast align-items-center position-fixed top-0 end-0" role="alert" aria-live="assertive" aria-atomic="true" data-bs-autohide="true">
